<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_button">order</string>
    <string name="quantity">Quantity</string>
    <string name="hint">Name</string>
    <string name="min_quantity">You cannot take less than 1 Coffee</string>
    <string name="max_quantity">You cannot take more than 100 Coffees</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <!-- For Java -->
    <string name="orderSummary_java">Just Java Order summary for : </string>
    <string name="name_java">Name : <xliff:g id="name" example="hemanshu">%s</xliff:g></string>
    <string name="whipped_cream_java">Whipped Cream : </string>
    <string name="chocolate_java">Chocolate : </string>
    <string name="quantity_java">Quantity : </string>
    <string name="total">Total : <xliff:g id="currency" example="$">%s</xliff:g></string>
    <string name="thank_you">Thank You!!</string>
</resources>
