<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:orientation="vertical">

        <EditText
            android:id="@+id/NameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textCapWords"
            android:paddingBottom="@dimen/margin_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <CheckBox
            android:id="@+id/WhippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_24"
            android:text="@string/whipped_cream"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <CheckBox
            android:id="@+id/ChoclateTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:paddingLeft="@dimen/margin_24"
            android:text="@string/chocolate"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrementButtonView"
                android:layout_width="@dimen/dimen_48"
                android:layout_height="@dimen/dimen_48"
                android:layout_marginRight="@dimen/margin_8"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <Button
                android:id="@+id/IncrementButtonView"
                android:layout_width="@dimen/dimen_48"
                android:layout_height="@dimen/dimen_48"
                android:layout_marginLeft="@dimen/margin_8"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <TextView
            android:id="@+id/orderSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:onClick="submitOrder"
            android:text="@string/order_button" />
    </LinearLayout>
</ScrollView>